# xplorecov

./: .editorconfig  .gitignore  README.md  context_for_llm  prompt.md
AI/Code/: Modelfile
AI/Content/: Modelfile
backend/: gunicorn.config.py  manage.py  pyproject.toml  snpEff_genes.txt  snpEff_summary.html
backend/ai_engine/: cache_manager.py  consumer.py  llm_chain.py  models.py  serializers.py  urls.py  views.py
backend/ai_engine/tasks/: rag.py
backend/analysis_engine/: admin.py  apps.py  consumer.py  llm_chain.py  models.py  serializers.py  urls.py  views.py
backend/analysis_engine/management/commands/: create_backend_uuid.py
backend/analysis_engine/tasks/: run_main_workflow.py  run_workflow.py
backend/datalake/d5feaa0d-9516-48b7-88a1-3b072887448b/V1StGXR8_Z5jdHi6B-myT/result/nextclade/: clade_report.tsv
backend/datalake/d5feaa0d-9516-48b7-88a1-3b072887448b/V1StGXR8_Z5jdHi6B-myT/result/nextclade/others/: nextclade.cds_translation.E.fasta  nextclade.cds_translation.M.fasta  nextclade.cds_translation.N.fasta  nextclade.cds_translation.ORF1a.fasta  nextclade.cds_translation.ORF1b.fasta  nextclade.cds_translation.ORF3a.fasta  nextclade.cds_translation.ORF6.fasta  nextclade.cds_translation.ORF7a.fasta  nextclade.cds_translation.ORF7b.fasta  nextclade.cds_translation.ORF8.fasta  nextclade.cds_translation.ORF9b.fasta  nextclade.cds_translation.S.fasta  nextclade.csv  nextclade.nwk
backend/query_engine/: admin.py  models.py  serializers.py  urls.py  views.py
backend/query_engine/tasks/: generate_sql_command.py  train_data.py  upload_data.py
backend/report_engine/: apps.py
backend/workflow/: Main.Snakefile  Update.Snakefile
backend/workflow/config/: config.yaml
backend/workflow/envs/: tool.yaml
backend/workflow/rules/annotation/: nextclade.smk  pangolin-pangolearn.smk  pangolin-usher.smk  snpeff.smk  usher.smk
backend/workflow/rules/combine/: index.smk
backend/workflow/rules/update/: nextclade_pangolin.smk  usher.smk
backend/workflow/scripts/: parallel_pango_usher.py  parallel_usher.py
backend/workflow/wrappers/: combine.wrapper.py  nextclade.wrapper.py  pangolin-pangolearn.wrapper.py  pangolin-usher.wrapper.py  usher.wrapper.py
backend/xplorecov_backend/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: .prettierrc  app.vue  bun.lockb  eslint.config.mjs  nuxt.config.ts  old.package.json  package.json  tailwind.config.js
frontend/api/: analysis.js
frontend/components/: Logo.vue  MyDataTable.vue  NavBar.vue  ReadTable.vue
frontend/composables/: useChatWebSocket.js  usePondFileError.js  useTyping.js  useWebSocket.js
frontend/layouts/: default.vue
frontend/pages/: analysis.vue  index.vue  upload.vue
frontend/stores/: session.js  (+1 more)
test_files/: combined_report.tsv  metadata_20022024.tsv  test
(+13 files in other folders)
