[tool.poetry]
name = "xplorecov-backend"
version = "0.1.0"
description = ""
authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"
djangorestframework = "^3.15.2"
pandas = "^2.2.3"
tqdm = "^4.66.6"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
channels-redis = "^4.2.0"
channels = "^4.1.0"
redis = "^5.2.0"
pyarrow = "^18.0.0"
kaleido = "0.2.1"
vanna = {extras = ["chromadb", "ollama"], version = "^0.7.5"}
langfuse = "^2.53.9"
huggingface-hub = "^0.26.2"
mpire = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
