[project]
name = "xplorecov-backend"
version = "0.1.0"
description = "Add your description here"
authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "django>=5.2.3",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "fireducks>=1.2.8",
    "guardrails-ai>=0.5.15",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.33.0",
    "kaleido==0.2.1",
    "langfuse>=3.0.1",
    "mpire>=2.10.2",
    "numpy>=2.3.0",
    "ollama>=0.5.1",
    "openai>=1.86.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
    "scipy>=1.15.3",
    "sentence-transformers>=4.1.0",
    "snakemake>=9.5.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.3",
    "uvicorn-worker>=0.3.0",
    "vanna[chromadb,ollama]>=0.7.9",
    "websockets>=15.0.1",
]
